# localCowork

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
agent/: __init__.py  cli.py  config.py  events.py  logging.py  permissions.py  safety.py  security.py  tokens.py  version.py  web.py
agent/cli/: __init__.py  agent_loop.py  app.py  console.py  doctor.py
agent/cli/commands/: __init__.py  ask.py  config.py  init.py  run.py  serve.py  tasks.py
agent/llm/: __init__.py  backend.py  client.py  ollama_backend.py  prompts.py
agent/orchestrator/: __init__.py  agent_models.py  database.py  deps.py  executor.py  middleware.py  models.py  planner.py  react_agent.py  routes.py  server.py  session.py  task_manager.py  tool_registry.py  websocket.py
agent/orchestrator/static/: app.js  index.html  styles.css
agent/sandbox/: __init__.py  sandbox_runner.py
agent/tools/: __init__.py  archive_tools.py  builtin.py  chat_tools.py  data_tools.py  file_tools.py  json_tools.py  markdown_tools.py  pdf_tools.py  registry.py  shell_tools.py  text_tools.py  tool_selector.py  web_tools.py
agent/trace/: __init__.py  evaluation.py  trainable_agent.py  trainer.py
docs/: progress.md  project_explained.md
tests/: __init__.py  conftest.py  test_archive_tools.py  test_cli_input.py  test_config.py  test_doctor.py  test_e2e.py  test_error_recovery.py  test_events.py  test_file_tools.py  test_integration.py  test_json_repair.py  test_json_tools.py  test_list_dir.py  test_llm_backend.py  test_llm_client.py  test_memory.py  test_models.py  test_permissions.py  test_rate_limiter.py  test_react_agent.py  test_safety.py  test_security.py  test_server.py  test_session.py  test_shell_tools.py  test_sub_agents.py  test_tool_caching.py  test_tool_execution.py  test_tool_selector.py  test_tools.py  test_trace.py  test_web_retry.py  test_web_tools.py  test_websocket.py  test_ws_reconnect.py
