[project]
name = "localcowork"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "pypdf>=6.6.0",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "typer>=0.21.1",
    "uvicorn>=0.40.0",
]
[project.scripts]
localcowork = "agent.cli:main"
