[project]
name = "localcowork"
version = "0.1.0"
description = "A privacy-first AI assistant that runs entirely on your machine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "ollama>=0.4.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.0.0",
    "pypdf>=6.6.0",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "typer>=0.21.1",
    "uvicorn>=0.40.0",
    "websockets>=12.0",
    "aiofiles>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
localcowork = "agent.cli:main"
